Updated column structure

--- a/about.html
+++ b/about.html
@@ -22,58 +22,74 @@
             </nav>
           </div>
         </header>
-        <main>
-          <div>
-              <div class="container">
-                  <h1>About</h1>
-              </div>
-          </div>
-          <div>
-            <div class="container">
-              <picture>
-                  <source srcset="img/portrait-sml.jpg" media="(max-width:767px)" />
-                  <img src="img/portrait-lrg.jpg" alt="Jordan Skedgwell" />
-              </picture>
-            </div>
-          </div>
 
-          <div class="container">
-            <div class="row">
-              <div class="column col-md-6 col-lg-7">
-                <h2>My story</h2>
-                <p>I have a real sense of adventure and curiosity, and spent periods of my adult life living, travelling and immersing myself in multiple countries and cultures, including Mexico, Canada, Germany, and Scotland</p>
-                <p>Outside of work I enjoy snowboarding and surfing, chatting with my nieces and nephews, holding conversations with an assortment of animals, and mourning the loss of authentic hard rock and rap music.</div>
-                <a href="files/resume.pdf" target="_blank" download>Download my CV</a>
-              <div class="column col-md-6 col-lg-7">
-                <h2>Skills and tools</h2>
-                  <h3>Relevant skills</h3>
-                    <ul>
-                      <li>Leading end-to-end product design processes</li>
-                      <li>UI design and frontend development</li>
-                      <li>Stakeholder and client engagement</li>
-                      <li>Team leadership</li>
-                      <li>Project management</li>
-                    </ul>
-                  <h3>Tools I use</h3>
-                    <ul>
-                      <li>Askable</li>
-                      <li>DevOps</li>
-                      <li>Figma</li>
-                      <li>InVision</li>
-                      <li>Jira</li>
-                      <li>Optimal Workshop</li>
-                      <li>Sketch</li>
-                    </ul>
+        <main>
+            <div>
+                <div class="container">
+                    <h1>About</h1>
                 </div>
-              </div>
             </div>
-          </main>
+            <div>
+                <div class="container">
+                  <div class="row">
+                    <div class="col-lg-5 col-centered"
+                      <picture>
+                          <source srcset="img/portrait-sml.jpg" media="(max-width:767px)" />
+                          <img src="img/portrait-lrg.jpg" alt="Jordan Skedgwell" />
+                      </picture>
+                    </div>
+                  </div>
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-lg-7">
+                        <h2>My story</h2>
+                        <p>I have a real sense of adventure and curiosity, and spent periods of my adult life living, travelling and immersing myself in multiple countries and cultures, including Mexico, Canada, Germany, and Scotland</p>
+                        <p>Outside of work I enjoy snowboarding and surfing, chatting with my nieces and nephews, holding conversations with an assortment of animals, and mourning the loss of authentic hard rock and rap music.</p>
+                        <a href="files/resume.pdf" target="_blank" download>Download my CV</a>
+                    </div>
+                    <div class="col-md-12 col-lg-5">
+                      <h2>Skills and tools</h2>
+                      <div class="row">
+                        <div class="col-md-6 col-lg-12">
+                          <h3>Relevant skills</h3>
+                            <ul>
+                                <li>Leading end-to-end product design processes</li>
+                                <li>UI design and frontend development</li>
+                                <li>Stakeholder and client engagement</li>
+                                <li>Team leadership</li>
+                                <li>Project management</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-6 col-lg-12">
+                          <h3>Tools I use</h3>
+                            <ul>
+                                <li>Askable</li>
+                                <li>DevOps</li>
+                                <li>Figma</li>
+                                <li>InVision</li>
+                                <li>Jira</li>
+                                <li>Optimal Workshop</li>
+                                <li>Sketch</li>
+                            </ul>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+
+
+
         <footer id="contact">
             <div class="container">
+                <!-- Contact section -->
                 <div>
                     <h2>Get in touch</h2>
                     <p>If you'd like to chat, call me on <a href="tel:0400000000">0400 000 000</a>. If you'd prefer to email, use the button below.</p>
-                    <div>
+                    <div class="email">
                         <a href="mailto:jordan.skedgwell@gmail.com" class="button contact">Email me</a>
                     </div>
                     <div>
@@ -100,7 +116,7 @@
                 </div>
             </div>
         </footer>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        <script src="js/scripts.js"></script>
+      <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+      <script src="js/scripts.js"></script>
     </body>
 </html>
