--- a/centralamerica.html
+++ b/centralamerica.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
 
-    <body id=central-america-page>
+    <body id="central-america-page">
         <header>
             <div class="container">
                 <img class="logo" src="img/logo.svg" alt="Jordan Skedgwell" />
@@ -34,8 +34,14 @@
                     </picture>
                     <h3>Cuba</h3>
                     <p>I’d been curious about Cuba for a long time, so it was really exciting to touch down in Havana on a late December evening. My hosts were a lovely couple - a psychologist and a dental technician.</p>
-                    <p>Highlights of my two weeks in Cuba included a few days in Vinales, an evening at the Fábrica de Arte Cubano, and a visit to Radio Havana (my visit inspired by the <a href="https://www.youtube.com/embed/pkMhQxhtUb0"> classic Rancid track)</a>.</p>
-                    <p>At Radio Havana, my friend and I were mistaken for American experts on radical Islam and were very nearly ushered into an interview, before explaining in our broken Spanish that we simply wanted to check out the studio.</p>
+                    <p>
+                        Highlights of my two weeks in Cuba included a few days in Vinales, an evening at the Fábrica de Arte Cubano, and a visit to Radio Havana (my visit inspired by the
+                        <a href="https://www.youtube.com/embed/pkMhQxhtUb0"> classic Rancid track)</a>.
+                    </p>
+                    <p>
+                        At Radio Havana, my friend and I were mistaken for American experts on radical Islam and were very nearly ushered into an interview, before explaining in our broken Spanish that we simply wanted to check out the
+                        studio.
+                    </p>
                 </div>
                 <div>
                     <picture>
@@ -67,7 +73,7 @@
                 <div>
                     <h2>Get in touch</h2>
                     <p>If you'd like to chat, call me on <a href="tel:0400000000">0400 000 000</a>. If you'd prefer to email, use the button below.</p>
-                    <div>
+                    <div class="email">
                         <a href="mailto:jordan.skedgwell@gmail.com" class="button contact">Email me</a>
                     </div>
                     <div>
@@ -91,10 +97,10 @@
                         </a>
                     </div>
                     <p>Copyright Jordan Skedgwell 2021</p>
-                  </div>
                 </div>
-              </footer>
-              <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-            <script src="js/scripts.js"></script>
-          </body>
-      </html>
+            </div>
+        </footer>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        <script src="js/scripts.js"></script>
+    </body>
+</html>
