--- a/centralamerica.html
+++ b/centralamerica.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8" />
-        <title>Central America</title>
+        <title>Home</title>
+        <script src="https://kit.fontawesome.com/281fe642ea.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -10,17 +11,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
 
-    <body id="central-america-page">
+    <body>
         <header>
             <div class="container">
+              <div class="navtoggle" id="myNavtoggle" position=relative>
                 <img class="logo" src="img/logo.svg" alt="Jordan Skedgwell" />
-                <nav>
+                  <nav>
                     <ul class="navigation">
                         <li><a href="index.html">Work</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="#contact">Contact</a></li>
+                        <li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fas fa-bars"></i></a></li>
                     </ul>
-                </nav>
+                  </nav>
+              </div>
             </div>
         </header>
 
