Updated button colors for a11y

--- a/centralamerica.html
+++ b/centralamerica.html
@@ -41,7 +41,7 @@
         <p>I’d been curious about Cuba for a long time, so it was really exciting to touch down in Havana on a late December evening. My hosts were a lovely couple - a psychologist and a dental technician.</p>
         <p>
           Highlights of my two weeks in Cuba included a few days in Vinales, an evening at the Fábrica de Arte Cubano, and a visit to Radio Havana (my visit inspired by the
-          <a href="https://www.youtube.com/embed/pkMhQxhtUb0"> classic Rancid track)</a>.
+          <a href="https://www.youtube.com/embed/pkMhQxhtUb0"> classic Rancid track</a>).
         </p>
         <p>
           At Radio Havana, my friend and I were mistaken for American experts on radical Islam and were very nearly ushered into an interview, before explaining in our broken Spanish that we simply wanted to check out the
