--- a/centralamerica.html
+++ b/centralamerica.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <div class="container">
-      <div class="navtoggle" id="myNavtoggle" position=relative>
+      <div class="navtoggle" id="myNavtoggle">
         <img class="logo" src="img/logo.svg" alt="Jordan Skedgwell" />
         <nav>
           <ul class="navigation">
