--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div id="hero">
       <!-- Hero section -->
       <div class="container">
-        <h1>Hi! I’m Jordan Skedgwell. <span>I’m a UX designer based in Australia.</span></h1>
+        <h1>Hi! I’m Jordan Skedgwell. <span>I’m a product designer based in Australia.</span></h1>
         <p>I love to travel and take photos of the places I visit.</p>
       </div>
     </div>
